# based64

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  README.org  based64.opam  dune-project  notes.md  ocaml_ctypes_example.opam
.github/workflows/: lower-bounds.yml  test.yml
benchmark/: benchmark.ml  dune
bindings/: dune  function_description.ml  type_description.ml
bindings/libbase64/: Makefile  run.sh
bindings/libbase64/lib/: exports.txt
lib/: based64.ml  based64.mli  dune  function_description.ml
lib/libbase64/: Makefile  Makefile_old
lib/libbase64/include/: libbase64.h
lib/libbase64/lib/: lib.c
owoinclude/: libbase64.h
test/: dune  test.ml
