(library
 (name bindings)
 (install_c_headers base64)
 (foreign_archives base64)
 (flags (:standard -w -9-27))
 (ctypes
  (external_library_name base64)
  (deps base64.h dllbase64.so libbase64.a)
  (build_flags_resolver
    (vendored
      (c_flags ("-Ilib" "-I."))))
    (headers (include "libbase64.h"))
    (type_description
      (instance Type)
      (functor Type_description))
    (function_description
      (concurrency unlocked)
      (instance Function)
      (functor Function_description))
      (generated_types Types_generated)
      (generated_entry_point C)))

(data_only_dirs libbase64)

(rule
  (deps (source_tree libbase64))
  (targets libbase64.a dllbase64.so base64.h)
  (action (no-infer
          (progn (chdir libbase64
                        (progn (run make all)))
                 (copy libbase64/lib/libbase64.a libbase64.a)
                 (copy libbase64/lib/libbase64.so dllbase64.so)
                 (copy libbase64/include/libbase64.h base64.h)))))